@@ -163,6 +163,8 @@ New features
      constructs.
    - o.a.l.analysis.miscellaneous.WordDelimiterFilter: TokenFilter that splits words 
      into subwords and performs optional transformations on subword groups.
+   - o.a.l.analysis.miscellaneous.RemoveDuplicatesTokenFilter: TokenFilter which 
+     filters out Tokens at the same position and Term text as the previous token.
    (... in progress)
 
 Build
